# usefull

./: bash_utile.txt
all/: C#.use.md  C++.use.md  C.use.md  CI_CD.use.md  Excel.use.md  FreeFem++.use.md  GPU  Hotkey.use.md  MPI.use.md  SQL.use.md  VirtualBox.use.md  asciidoctor.use.adoc  autoHotKey.use.adoc  bash.use.md  bash_utile.txt  bash_utile.use.md  batch.use.adoc  c++.use.md  cmake.use.md  docker.use.md  doxygen.use.md  doxygen.utile  exiftool.use.md  gRPC.use.md  gdb.use.md  git.use.md  git.utile  imageMagick.use.md  java.use.md  jupyterNotebook.use.adoc  keyboard.use.md  keyboard_remap.use.md  latex.tex  latex.use.md  link.html  linuxInstall.use.md  linuxTool.use.md  mac.use.md  makefile.use.md  makefile_rappel.txt  (+24 more)
all/C_utile/: rappel.c
all/R_utile/: R_utile.txt
all/c++_utile/: c++.use.md  c++.utile  gprof.utile
all/cmake_utile/Lab_template/tests/: test_gtest.cxx  test_gtest_class.cxx
all/logiciel/: blender.utile  gimp.use.md  maya.use.md
all/more_details/C++/: Exemple.h  External_libraries.use.md
all/more_details/Debug_C/: Makefile  README  vermine.c
all/more_details/cmake/Lab_template/: CMakeLists.txt
all/more_details/cmake/Lab_template/include/: functions.h
all/more_details/cmake/Lab_template/tests/: CMakeLists.txt
all/more_details/java/: java_compile.use.md  netbeans.use.md
all/python_utile/: jupiter.utile  python.utile
